top->bottom->top was counted as one iteration. Now it is counted as two 
iterations, and implemented by only allowing even numbers of iterations to 
be returned. This is in order to make the computational work of an 
iteration comparable to the other ART methods.

For SIRT methods, the possibility to give third input restart has been 
removed due to ambiguities and lack of demand. It is now possible to input 
a known largest singular value through a field s1 in the options struct.

The info output has been changed from a 3-element vector to a struct with 
more informative field names and more information such as the list of 
iterates returned.


Revisions in Version 1.3
------------------------

A bug was found in fanbeamtomo, paralleltomo, and seismictomo that caused
some elements of the matrix A to incorectly be set to zero; it was fixed
in Version 1.2.

All iterative methods run faster and use less memory.

fanbeamtomo and paralleltomo now return the correct d.

rzr allows b with multiple columns.

All iterative methods now include box constraints.

All ART methods now include a damping factor to avoid division by
very small norms.

All SIRT methods had some of the stopping rules changed:
 - DP now always uses the standard residual vector r^k = b - A x^k,
 - ME now always uses 0.5 r^k'(r^{k+1}+r^k)/||r^k||_2.

The default value for lambda was changed to 1 in kaczmarz and symkaczmarz.

The default value for lambda was changed to 1.9/norm(A'*M*A) in all
SIRT methods.

New functions:
 - fbp             - filtered back projection, conforming to AIR Tools,
 - cart            - columnwise version of Kaczmarz's method (CART),
 - phantomgallery  - collection of 2D phantoms,
 - seismicwavetomo - similar to seismictomo but without ray model.

Note: for all ART methods NCP is implemented correct but it is not
recommended as it often leads to a very early termination. CART with
a random choice of columns converges very slowly and is not included.